--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@reduxjs/toolkit": "^2.5.1",
     "app-geriatrico-frond": "file:",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.2"
   },
